clusters/izzy-cluster/proxmox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox
  namespace: proxmox
spec:
  ports:
  - protocol: TCP
    port: 443
    targetPort: 8006
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: proxmox
  namespace: proxmox
  labels:
    kubernetes.io/service-name: proxmox
addressType: IPv4
ports:
  - name: https
    appProtocol: https
    protocol: TCP
    port: 8006
endpoints:
  - addresses:
      - "192.168.100.200"
      - "192.168.100.201"
      - "192.168.100.202"
    conditions:
      ready: true
